--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "YelpCamp",
+  "name": "brew-review",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,16 +10,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.26.3",
     "connect-flash": "^0.1.1",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
     "joi": "^17.4.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.8",
+    "multer": "^1.4.3",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "sanitize-html": "^2.4.0"
   }
 }
